--- a/public/dashboard/quiz/css/smart_wizard.css
+++ b/public/dashboard/quiz/css/smart_wizard.css
@@ -54,12 +54,12 @@
 }
 
 .sw-theme-default .sw-toolbar {
-    background: #f9f9f9;
+    /* background: #f9f9f9;*/
     border-radius: 0 !important;
     padding-left: 10px;
     padding-right: 10px;
     padding: 10px;
-    margin-bottom: 0 !important;
+    margin-bottom: 5px !important;
 }
 
 .sw-theme-default .sw-toolbar-top {
