--- a/public/dashboard/quiz/css/quiz.css
+++ b/public/dashboard/quiz/css/quiz.css
@@ -1,109 +1,24 @@
-@import('https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.0/css/bootstrap.min.css') .funkyradio div {
-    clear: both;
-    /*margin: 0 50px;*/
-    overflow: hidden;
-}
 .body-quiz{
         background: url(images/pattern.jpg) #DFE0E2;
 }
 .smartwizard{ background-color: #fff; border-radius: 3px 0 0 3px;}
-.funkyradio-success{
-    margin: 0 30px 0 30px;
-    
+.no-border{ border: 0px solid #fff; }
+.privew {
+    margin-bottom: 20px;
 }
-.funkyradio label {
-    /*min-width: 400px;*/
-    width: 100%;
-    border-radius: 3px;
-    border: 1px solid #D1D3D4;
-    font-weight: normal;
-}
-.funkyradio input[type="radio"]:empty, .funkyradio input[type="checkbox"]:empty {
-    display: none;
-}
-.funkyradio input[type="radio"]:empty ~ label, .funkyradio input[type="checkbox"]:empty ~ label {
-    position: relative;
-    line-height: 2.5em;
-    text-indent: 3.25em;
-    margin-top: 2em;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-.funkyradio input[type="radio"]:empty ~ label:before, .funkyradio input[type="checkbox"]:empty ~ label:before {
-    position: absolute;
-    display: block;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    content:'';
-    width: 2.5em;
-    background: #D1D3D4;
-    border-radius: 3px 0 0 3px;
-}
-.funkyradio input[type="radio"]:hover:not(:checked) ~ label:before, .funkyradio input[type="checkbox"]:hover:not(:checked) ~ label:before {
-    content:'\2714';
-    text-indent: .9em;
-    color: #C2C2C2;
-}
-.funkyradio input[type="radio"]:hover:not(:checked) ~ label, .funkyradio input[type="checkbox"]:hover:not(:checked) ~ label {
-    color: #888;
-}
-.funkyradio input[type="radio"]:checked ~ label:before, .funkyradio input[type="checkbox"]:checked ~ label:before {
-    content:'\2714';
-    text-indent: .9em;
-    color: #333;
-    background-color: #ccc;
-}
-.funkyradio input[type="radio"]:checked ~ label, .funkyradio input[type="checkbox"]:checked ~ label {
-    color: #777;
-}
-.funkyradio input[type="radio"]:focus ~ label:before, .funkyradio input[type="checkbox"]:focus ~ label:before {
-    box-shadow: 0 0 0 3px #999;
-}
-.funkyradio-default input[type="radio"]:checked ~ label:before, .funkyradio-default input[type="checkbox"]:checked ~ label:before {
-    color: #333;
-    background-color: #ccc;
-}
-.funkyradio-primary input[type="radio"]:checked ~ label:before, .funkyradio-primary input[type="checkbox"]:checked ~ label:before {
-    color: #fff;
-    background-color: #337ab7;
-}
-.funkyradio-success input[type="radio"]:checked ~ label:before, .funkyradio-success input[type="checkbox"]:checked ~ label:before {
-    color: #fff;
-    background-color: #5cb85c;
-}
-.funkyradio-danger input[type="radio"]:checked ~ label:before, .funkyradio-danger input[type="checkbox"]:checked ~ label:before {
-    color: #fff;
-    background-color: #d9534f;
-}
-.funkyradio-warning input[type="radio"]:checked ~ label:before, .funkyradio-warning input[type="checkbox"]:checked ~ label:before {
-    color: #fff;
-    background-color: #f0ad4e;
-}
-.funkyradio-info input[type="radio"]:checked ~ label:before, .funkyradio-info input[type="checkbox"]:checked ~ label:before {
-    color: #fff;
-    background-color: #5bc0de;
-}
-
 .questionsBox {
     display: block;
     border: solid 1px #e3e3e3;
-    padding: 5px 10px 0px;
-    box-shadow: inset 0 0 30px rgba(000,000,000,0.1), inset 0 0 3px rgba(255,255,255,1);
-    border-radius: 5px;
+    padding: 10px 20px 0px;
+    box-shadow: inset 0 0 30px rgba(000,000,000,0.1), inset 0 0 4px rgba(255,255,255,1);
+    border-radius: 3px;
     margin: 0 10px;
-}
-.lable-answer:hover{background-color:#286090; font-weight: bold;}
-.questions {
+}.questions {
     background: #007fbe;
     color: #FFF;
     font-size: 22px;
     padding: 8px 30px;
-    font-weight: 300;
-    margin: 0 -15px 10px;
+    margin: 0 -10px 10px;
     position: relative;
 }
 .questions:after {
@@ -135,3 +50,67 @@
     text-align: left;
     font-size: 0;
 }
+.answerList {
+    margin-bottom: 15px;
+}
+
+
+ol, ul {
+    list-style: none;
+}
+.answerList li:first-child {
+    border-top-width: 0;
+}
+.answerList li label:hover{background-color: #ddd;}
+
+.answerList li {
+    padding: 3px 0;
+    margin: 10px 0;
+}
+.answerList label {
+    display: block;
+    padding: 6px;
+    border-radius: 6px;
+    border: solid 1px #dde7e8;
+    font-weight: 400;
+    font-size: 15px;
+    cursor: pointer;
+    font-family: Arial, sans-serif;
+    margin-bottom:0px;
+}
+input[type=checkbox], input[type=radio] {
+    margin: 5px 10px;
+    line-height: normal;
+}
+.questionsRow {
+    background: #dee3e6;
+    margin: 0 -20px;
+    padding: 10px 20px;
+    border-radius: 0 0 3px 3px;
+}
+.button, .greyButton {
+    background-color: #f2f2f2;
+    color: #888888;
+    display: inline-block;
+    border: solid 3px #cccccc;
+    vertical-align: middle;
+    text-shadow: 0 1px 0 #ffffff;
+    line-height: 27px;
+    min-width: 160px;
+    text-align: center;
+    padding: 5px 20px;
+    text-decoration: none;
+    border-radius: 0px;
+    text-transform: capitalize;
+}
+.questionsRow span {
+    float: right;
+    display: inline-block;
+    line-height: 30px;
+    border: solid 1px #aeb9c0;
+    padding: 0 10px;
+    background: #FFF;
+    color: #007fbe;
+}
+
+
